syntax = "proto3";
package pokerchain.poker.v1;

option go_package = "github.com/yourusername/pokerchain/x/poker/types";

// PlayerState defines the PlayerState message.
message PlayerState {
  string index = 1;
  uint64 game_id = 2;
  string player_address = 3;
  uint64 seat = 4;
  uint64 chips = 5;
  string hole_cards = 6;
  string status = 7;
}
